# codebus

./: .gitignore  .pre-commit-config.yaml  .spectra.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-TW.md  build-installer.ps1  package.json  tauri-debug.ps1  vitest.config.ts
codebus-app/: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
codebus-app/design-handoff/: AUDIT.md  FEEDBACK.md  README.md  design-reply.html  v1.1-mocks.html  walkthrough-decisions.html
codebus-app/design-handoff/design_files/: index.html  styles.css
codebus-app/scripts/: cdp.mjs  focus-trap-probe.mjs  shoot.mjs  stage-cli.mjs
codebus-app/scripts/.i18n-followup-smoke/: SMOKE-REPORT.md  force-en.mjs
codebus-app/src/: App.test.tsx  App.tsx  lib.rs  main.rs  main.tsx
codebus-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
codebus-app/src-tauri/capabilities/: default.json
codebus-app/src-tauri/icons/: icon.icns
codebus-app/src-tauri/src/: config.rs  error.rs  lib.rs  main.rs  watcher.rs
codebus-app/src-tauri/tests/: keyring_ipc.rs
codebus-app/src-tauri/windows/: installer-hooks.nsh
codebus-app/src/components/: BottomStrip.test.tsx  BottomStrip.tsx  DropTargetOverlay.tsx  LoadingOverlay.test.tsx  LoadingOverlay.tsx  PhaseDots.test.tsx  PhaseDots.tsx  Toast.tsx  WindowControls.tsx
codebus-app/src/hooks/: useChatShortcut.test.tsx  useChatShortcut.ts  useLatestStreamEvent.test.ts  useLatestStreamEvent.ts  useLobbyDragDrop.test.tsx  useLobbyDragDrop.ts  useLocale.test.tsx  useLocale.ts  useNewGoalShortcut.test.tsx  useNewGoalShortcut.ts  useNewVaultShortcut.test.tsx  useNewVaultShortcut.ts  useUrlState.test.ts  useUrlState.ts  useWatcherEvent.test.ts  useWatcherEvent.ts
codebus-app/src/i18n/: a11y.test.ts  activityBanner.test.ts  chat.test.ts  errors.test.tsx  errors.ts  messages.ts  quiz.test.ts  settings.test.ts  useT.test.ts  useT.ts  workspace.test.ts
codebus-app/src/lib/: clusterTimeline.test.ts  clusterTimeline.ts  codex-validation.test.ts  ipc.effort.test.ts  ipc.localeOverride.test.ts  ipc.test.ts  ipc.ts  ipc.validation-i18n.test.ts  milkdown-wikilink.test.tsx  milkdown-wikilink.tsx  providers.test.ts  providers.ts  quiz-parse.test.ts  quiz-parse.ts  streamEventSummary.test.ts  streamEventSummary.ts  time.ts
codebus-app/src/sandbox/: PrimitiveShowcase.tsx
codebus-app/src/store/: chat.test.ts  chat.ts  goals.test.ts  goals.ts  quiz-history.test.ts  quiz-history.ts  quiz-wizard.test.ts  quiz-wizard.ts  route.test.ts  route.ts  settings.localeOverride.test.ts  settings.test.ts  settings.ts  vault-watcher-status.test.ts  vault-watcher-status.ts  vaults.test.ts  vaults.ts  wiki.test.ts  wiki.ts
codebus-app/src/styles/: globals.css  tokens.css
codebus-app/src/test/: forbidden-behaviors.test.tsx  setup.ts
codebus-cli/: Cargo.toml
codebus-cli/src/: main.rs  run_log.rs  ui.rs
codebus-cli/src/commands/: chat.rs  check.rs  config.rs  fix.rs  goal.rs  hook.rs  init.rs  lint.rs  mcp.rs  mod.rs  query.rs  quiz.rs
codebus-cli/src/mcp/: mod.rs  registry.rs  server.rs  tools.rs
codebus-cli/tests/: azure_key_pre_spawn.rs  chat_cancel.rs  chat_flow.rs  cli_routing.rs  config_subcommand.rs  fix_flow.rs  goal_content_verify_cli.rs  goal_flow.rs  hook_check_bash.rs  hook_check_read.rs  lint_flow.rs  mcp_multi_vault.rs  mcp_server.rs  parse_error_aborts_all_verbs.rs  query_flow.rs  quiz_flow.rs  quiz_validate_subaction.rs  scoped_env_injection.rs
codebus-cli/tests/bins/: mock_claude.rs
codebus-core/: Cargo.toml
codebus-core/src/: app_state.rs  lib.rs  win_console.rs
codebus-core/src/agent/: backend.rs  claude_backend.rs  claude_cli.rs  codex_backend.rs  dispatch.rs  env_overrides.rs  mod.rs  process_kill.rs  spawn_spec.rs
codebus-core/src/config/: claude_code.rs  codex.rs  endpoint.rs  global_starter.rs  goal.rs  hooks.rs  keyring.rs  lifecycle.rs  lint_fix.rs  loader.rs  log.rs  mod.rs  pii.rs  quiz.rs  schema.rs
codebus-core/src/fs/: file_ops.rs  raw_sync.rs
codebus-core/src/git/: mod.rs  nested_repo.rs  source_version.rs
codebus-core/src/llm/: claude_cli.rs  factory.rs  mod.rs  provider.rs
codebus-core/src/log/: factory.rs  mod.rs  sink.rs  verb_log.rs
codebus-core/src/obsidian/: config_path.rs  registry.rs
codebus-core/src/pii/: factory.rs  mod.rs  provider.rs
codebus-core/src/render/: banner.rs  event_renderer.rs  factory.rs  lint_text.rs  markdown_style.rs  mod.rs  options.rs  stream_event.rs
codebus-core/src/schema/: mod.rs  neutral.md
codebus-core/src/skill_bundle/: mod.rs
codebus-core/src/stream/: codex_parser.rs  mod.rs  parser.rs  sandbox_signal.rs
codebus-core/src/vault/: init.rs  layout.rs  lock.rs  manifest.rs  mod.rs  nav_stubs.rs  obsidian_register.rs  raw_sync.rs  sanity_check.rs  settings.rs  source_gitignore.rs  source_signal_detect.rs
codebus-core/src/verb/: chat.rs  content_verify.rs  error.rs  event.rs  fix.rs  goal.rs  mod.rs  query.rs  quiz.rs  quiz_progress.rs  quiz_validate.rs
codebus-core/src/wiki/: date.rs  frontmatter.rs  lint.rs  mod.rs  page_merge.rs  read.rs  slug_index.rs  stale_detect.rs  types.rs
codebus-core/tests/: endpoint_config_load.rs  obsidian_hyperlink_e2e.rs  schema_neutrality.rs  vault_init.rs  verb_library_surface.rs
legacy/v2-rust/codebus-cli/: Cargo.toml
sidecar/: README.md  codebus-sidecar.spec  docker-compose.qdrant.yml  pyproject.toml
sidecar/scripts/: qdrant_spawn_poc.py  reproduce_kb_build.py  smoke_chat_provider.py  start-qdrant.ps1  start-qdrant.sh
sidecar/src/codebus_agent/: __init__.py  _audit_paths.py  auth.py  (+7 more)
sidecar/tests/: conftest.py  test_auth.py  test_bind.py  test_cors_preflight_smoke.py  test_create_app.py  test_e2e_handshake.py  test_handshake.py  test_healthz.py  test_healthz_cli.py  test_kb_build_repro.py  test_main_run.py  test_no_jsonl_literal_drift.py  test_phase9_jsonl_acceptance.py  test_qdrant_supervisor.py  test_sanitizer_safety_chain_integration.py  test_watchdog.py  test_wire_kb_dependencies.py
tauri/src-tauri/: Cargo.toml  tauri.conf.json
(+1946 files in other folders)
