[workspace]
members = ["codebus-core", "codebus-cli", "codebus-app"]
resolver = "3"

[workspace.package]
version = "0.3.0-dev"
edition = "2024"
license = "MIT"
authors = ["harry18456 <harry18456@gmail.com>"]
repository = "https://github.com/harry18456/codebus"
rust-version = "1.85"

[workspace.dependencies]
codebus-core = { path = "codebus-core" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
anyhow = "1"
thiserror = "2"
sha2 = "0.10"
regex = "1"
dirs = "5"
ignore = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
