[workspace]
members = ["codebus-core", "codebus-cli", "codebus-app/src-tauri"]
resolver = "3"

[workspace.package]
version = "3.1.3"
edition = "2024"
license = "MIT"
authors = ["harry18456 <harry18456@gmail.com>"]
repository = "https://github.com/harry18456/codebus"
homepage = "https://github.com/harry18456/codebus"
description = "Drive an AI coding agent (Claude Code or OpenAI Codex) to build an Obsidian-compatible wiki of any codebase."
readme = "README.md"
keywords = ["cli", "wiki", "codebase", "claude", "codex"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.88"

[workspace.dependencies]
codebus-core = { path = "codebus-core" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
anyhow = "1"
thiserror = "2"
sha2 = "0.10"
regex = "1"
dirs = "5"
ignore = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
tempfile = "3"
supports-hyperlinks = "3"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native", "sync-secret-service"] }
rpassword = "7"
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
notify = "6"
# MCP server SDK (codebus mcp). Pinned to =1.8.0: the GitHub `main` examples
# have drifted ahead of this release's macro API (unit-struct +
# tool_router(server_handler) auto-handler), so pinning keeps the compiler as
# the arbiter of the explicit tool_router template this workspace uses.
rmcp = { version = "=1.8.0", features = ["server", "macros", "transport-io", "schemars"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
