[package]
name = "codebus-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Tauri desktop app for codebus (placeholder for future implementation)"

[lib]
path = "src/lib.rs"

[[bin]]
name = "codebus-app"
path = "src/main.rs"
