[package]
name = "codebus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line interface for codebus"

[[bin]]
name = "codebus"
path = "src/main.rs"

[dependencies]
codebus-core.workspace = true
clap = { workspace = true }
tokio = { workspace = true }
