[package]
name = "codebus-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core library for codebus: vault primitives, wiki lint, schema content"

[lib]
path = "src/lib.rs"
