[package]
name = "codebus-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core library for codebus: vault primitives, wiki lint, schema content"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
dirs = { workspace = true }
ignore = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
supports-hyperlinks = { workspace = true }
keyring = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
sha2 = { workspace = true }
