[project]
name = "codebus-agent"
version = "0.1.0"
description = "CodeBus sidecar — FastAPI + Instructor + qdrant-client; spawned by Tauri shell over loopback HTTP"
authors = [
    { name = "harry18456", email = "harry18456@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "charset-normalizer>=3.4.7",
    "detect-secrets>=1.5.0",
    "fastapi>=0.136.0",
    "instructor>=1.15.1",
    "openai>=1.0",
    "pathspec>=1.0.4",
    "psutil>=7.2.2",
    "pydantic>=2.13.2",
    "pyyaml>=6.0.2",
    "qdrant-client>=1.17.1",
    "sse-starlette>=2.1.3",
    "tiktoken>=0.8.0",
    "uvicorn>=0.44.0",
]

[project.scripts]
codebus-agent = "codebus_agent:main"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyinstaller>=6.19.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.21.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# fixtures/ 目錄內的檔案只是 scanner 測試素材（例如 sample_test.py 模擬 has_tests 偵測），
# 不是真的 test module，必須排除，否則 pytest 會 ImportError。
norecursedirs = ["tests/scanner/fixtures"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "slow: integration tests that spawn a real subprocess (≥ seconds)",
    "qdrant: requires a reachable Qdrant instance; skipped automatically when CODEBUS_QDRANT_URL is unreachable",
]
