[package]
name = "codebus-app-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "codebus desktop app (Tauri v2 backend)"

[lib]
name = "codebus_app_tauri_lib"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "codebus-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
codebus-core = { workspace = true }
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-single-instance = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
