[package]
name = "codebus"
version = "0.1.0"
description = "CodeBus desktop shell — Tauri 2.0 host for Nuxt3 frontend + Python sidecar"
edition = "2021"
rust-version = "1.80"

[lib]
name = "codebus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dunce = "1.0"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
