[package]
name = "codebus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line interface for codebus: build/update an LLM wiki for any codebase"

[[bin]]
name = "codebus"
path = "src/main.rs"

[dependencies]
codebus-core.workspace = true
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "signal"] }
futures-util = "0.3"
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
async-trait = "0.1"
